force-app/main/default/objects/ssot__AdverseEventAction__dlm/fields/ssot__ActionCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActionCodeId__c</fullName>
    <label>Action Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActionCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>