force-app/main/default/objects/ssot__AdverseEventAction__dlm/fields/ssot__ActionCodeObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActionCodeObject__c</fullName>
    <label>Action Code Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActionCodeObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>