force-app/main/default/objects/ssot__AdverseEventAction__dlm/fields/ssot__ActionReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActionReferenceId__c</fullName>
    <label>Action Reference</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActionReferenceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>