force-app/main/default/objects/ssot__AdverseEventAction__dlm/fields/ssot__rel_1716722924681_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716722924681_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdverseEventAction_AdverseEventId_ma_rel</label>
    <referenceTo>ssot__AdverseEvent__dlm</referenceTo>
    <relationshipLabel>AdverseEventAction_AdverseEventId_ma_rel</relationshipLabel>
    <relationshipName>rel_1716722924681_end</relationshipName>
    <type>Lookup</type>
</CustomField>