force-app/main/default/objects/ssot__AdverseEventAction__dlm/fields/ssot__rel_1716722926120_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716722926120_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdverseEventAction_ActionReferenceId_rel</label>
    <referenceTo>ssot__PatientMedicalProcedure__dlm</referenceTo>
    <relationshipLabel>AdverseEventAction_ActionReferenceId_rel</relationshipLabel>
    <relationshipName>rel_1716722926120_end</relationshipName>
    <type>Lookup</type>
</CustomField>